# openbmp-translator

./: CMakeLists.txt  README.md  main.cpp  obmp-translator.conf
src/: CLI.h  Config.cpp  Config.h  Consumer.cpp  Consumer.h  Logger.cpp  Main.cpp  MessageBus.cpp  MessageBus.h  Producer.h  TopicBuilder.cpp  TopicBuilder.h  Translator.cpp  Translator.h
src/Converter/: ConverterInterface.h  ObmpConverterV1.cpp  ObmpConverterV1.h  obmp-v1-notes.txt
